# TEL211

./: CMakeLists.txt  package.xml
assignment_2_snippets/: README.md
assignment_2_snippets/talker_listener_pkg/: CMakeLists.txt  package.xml
assignment_2_snippets/thorvald_launcher_pkg/: CMakeLists.txt  package.xml
assignment_3_snippets/: README.md
assignment_3_snippets/service_server_client_pkg/: CMakeLists.txt
assignment_3_snippets/service_server_client_pkg/src/: client.py  list_folders_client.py  server.py
code_from_lectures/navigate_to_pose_pkg/: CMakeLists.txt  REDAME.md  package.xml  setup.py
code_from_lectures/navigate_to_pose_pkg/launch/: husky_nav.launch  thorvald_nav.launch  world_bringup.launch
code_from_lectures/navigate_to_pose_pkg/nodes/: action_client  action_server
code_from_lectures/navigate_to_pose_pkg/src/navigate_to_pose_pkg/: simple_nav_helpers.py
code_from_lectures/simple_nav_pkg/: CMakeLists.txt  package.xml
code_from_lectures/simple_nav_pkg/action/: Nav.action
code_from_lectures/simple_nav_pkg/launch/: husky_nav.launch  thorvald_nav.launch  world_bringup.launch
code_from_lectures/simple_nav_pkg/src/: simple_action_server.py
code_from_lectures/turtle_tf_examples/launch/: broadcast_tf.launch  turtle_buddies.launch
demo_packages/: CMakeLists.txt
demo_packages/velodyne_simulator/urdf/: HDL-32E.urdf.xacro
talker_listener_pkg/: talker.py
velodyne_simulator_pkgs/: pcl2_subscriber.py
velodyne_simulator_pkgs/launch/: example.launch  vl16_example.launch
velodyne_simulator_pkgs/urdf/: VLP-16.urdf.xacro  example.urdf.xacro
